Animation: Fixed vector layer scaler keyframe loading.

Opacity channel now loads correctly for vector layers.

BUG:452144